# cargo-notice

./: Cargo.toml  LICENSE-MIT  README.md  cargo-notice.toml
sample/: GenerateSample.md  template.toml
src/: check.rs  generate.rs  init.rs  license.rs  main.rs  notice_toml.rs
