[package]
name = "cargo-notice"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
cargo_metadata = "0.22.0"
clap = { version = "4.5.45", features = ["derive"] }
serde = "1.0.219"
toml = "0.9.5"
thiserror = "2"
anyhow = "1.0.99"
regex = "1.11.2"
dialoguer = "0.12.0"
colored = "3"
